--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
+  
+  <script data-ad-client="ca-pub-5549646461051790" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- ======================
   ======================================================= -->
 </head>
