--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script data-ad-client="ca-pub-5549646461051790" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   
   <meta charset="utf-8">
-  <title>Seifo.me</title>
+  <title>1110011.studio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -37,7 +37,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Seifo</a>
+      <a class="navbar-brand js-scroll" href="#page-top">1110011</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -78,7 +78,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am SEiF Khalaf</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">CEO Seifo,Web Designer,Motion Graphic Designer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">CEO 1110011,Graphic Designer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -102,30 +102,30 @@
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>Seif Khalaf</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Graphic Designer</span></p>
                       <p><span class="title-s">Email: </span> <span>admin@seifo.me</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(+20) 1270-195010</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(+20) 111-241-8887</span></p>
                     </div>
                   </div>
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                  <span>HTML</span> <span class="pull-right">85%</span>
+                  <span>Photoshop</span> <span class="pull-right">85%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>CSS3</span> <span class="pull-right">75%</span>
+                  <span>Illustrator</span> <span class="pull-right">75%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>PHP</span> <span class="pull-right">50%</span>
+                  <span>Cinema 4D</span> <span class="pull-right">50%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
+                  <span></span> <span class="pull-right">90%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
