--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <script data-ad-client="ca-pub-5549646461051790" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
+  
   <meta charset="utf-8">
   <title>1110011.studio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -24,12 +26,7 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: DevFolio
-    Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
+
 </head>
 
 <body id="page-top">
@@ -37,7 +34,7 @@
   <!--/ Nav Star /-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top">Seifo</a>
+      <a class="navbar-brand js-scroll" href="#page-top">1110011</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
