--- a/blog-single.html
+++ b/blog-single.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DevFolio Bootstrap Template</title>
+  <title>Seif </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -355,7 +355,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="copyright-box">
-              <p class="copyright">&copy; Copyright <strong>D1110011</strong>. All Rights Reserved</p>
+              <p class="copyright">&copy; Copyright <strong>1110011</strong>. All Rights Reserved</p>
               <div class="credits">
               
               </div>
